adiciona poster com vídeo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="/img/logo_color_insta.png" />
     <title>Instagram</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -104,7 +105,13 @@
                         </div>
                         <button><ion-icon name="ellipsis-horizontal"></ion-icon></ion-icon></button>
                     </div>
-                    <div class="img"></div>
+                    <div class="video">
+                        <video autoplay loop muted>
+                            <source src="/img/video.mp4" type="video/mp4">
+                            <source src="/img/video.ogv" type="video/ogv">
+                            Seu navegador não suporta reproduzir esse vídeo.
+                        </video>
+                    </div>
                     <div class="inf">
                         <div>
                             <div class="acoes">
