Adiciona comentarios nos posts

--- a/index.html
+++ b/index.html
@@ -150,15 +150,15 @@
                             <img src="img/respondeai 1.png" alt="curtido por">
                             <p>Curtido por <strong>respondeai</strong> e <strong>outras 101.523 pessoas</strong></p>
                         </div>
-                        <div>
+                        <div class="comments">
                             <p>Ver todos os 403 comentarios</p>
                             <div>
                                 <p><strong>respondeai</strong><span>@tadandoonda</span>tooop❤️</p>
-                                <button>icon</button>
+                                <button><ion-icon name="heart-outline"></ion-icon></button>
                             </div>
                             <div>
                                 <p><strong>respondeai</strong><span>@showdbolinha</span>Iiinsano</p>
-                                <button>icon</button>
+                                <button><ion-icon name="heart-outline"></ion-icon></button>
                             </div>
                         </div>
                     </div>
