Adicina barra inferior layout mobile

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 </div>
                 <!-- Botão mover para o lado -->
                 <button>
-                    <ion-icon name="chevron-forward-circle-sharp"></ion-icon>
+                    <ion    icon-icon name="chevron-forward-circle-sharp"></ion>
                 </button>
             </div>
             <div class="posts">
@@ -537,6 +537,23 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="barra_inf">
+            <button>
+                <ion-icon name="home"></ion-icon>
+            </button>
+            <button>
+                <ion-icon name="search-sharp"></ion-icon>
+            </button>
+            <button>
+                <ion-icon name="add-circle-outline"></ion-icon>
+            </button>
+            <button>
+                <ion-icon name="heart-outline"></ion-icon>
+            </button>      
+            <button>
+                <ion-icon name="person-outline"></ion-icon>
+            </button>         
         </div>
         <div class="sidebar">
             <div class="account_featured">
