Resolve problema do botão da barra de stories

--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                     </div>
                 </div>
                 <!-- Botão mover para o lado -->
-                <button>
-                    <ion    icon-icon name="chevron-forward-circle-sharp"></ion>
+                <button class="btn_next">
+                    <ion-icon name="chevron-forward-circle-sharp"></ion-icon>
                 </button>
             </div>
             <div class="posts">
@@ -557,10 +557,12 @@
         </div>
         <div class="sidebar">
             <div class="account_featured">
-                <img src="/img/respondeai 1.png" alt="Perfil proprio">
+                <!-- <img src="/img/imgpw.png" alt="Perfil proprio">
+                 -->
+                <i></i>
                 <div>
                     <p><strong>willianlago</strong></p>
-                    <p>Catana</p>
+                    <p>showdebolinha</p>
                 </div>
             </div>
             <div class="account_sugestion">
