Modifica caminho das imagens e atributos da tag input

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/img/logo_color_insta.png" />
+    <link rel="shortcut icon" href="./img/logo_color_insta.png" />
     <title>Instagram</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,9 +26,9 @@
                 <div class="logo">
                     <ion-icon class="teste" name="logo-instagram"></ion-icon>
                     <div class="bar_vest"></div>
-                    <img src="/img/logo.png" alt="logo do instagram">
+                    <img src="./img/logo.png" alt="logo do instagram">
                 </div>
-                <input type="text" name="nome" value="Pesquisar" />
+                <input type="text" name="nome" placeholder="Pesquisar" />
                 <ion-icon name="paper-plane-outline"></ion-icon>
             </div>
             <div class="direito">
@@ -46,7 +46,7 @@
                     <div>
                         <div class="gradient_border">
                             <div>
-                                <img src="/img/driven.png" alt="story">
+                                <img src="./img/driven.png" alt="story">
                             </div>
                         </div>
                         <p>Driven</p>
@@ -54,7 +54,7 @@
                     <div>
                         <div class="gradient_border">
                             <div>
-                                <img src="/img/meowed 1.png" alt="story">
+                                <img src="./img/meowed 1.png" alt="story">
                             </div>
                         </div>
                         <p>meowed</p>
@@ -62,7 +62,7 @@
                     <div>
                         <div class="gradient_border">
                             <div>
-                                <img src="/img/cars.jpg" alt="story">
+                                <img src="./img/cars.jpg" alt="story">
                             </div>
                         </div>
                         <p>cars</p>
@@ -70,7 +70,7 @@
                     <div>
                         <div class="gradient_border">
                             <div>
-                                <img src="/img/world_programming.jpg" alt="story">
+                                <img src="./img/world_programming.jpg" alt="story">
                             </div>
                         </div>
                         <p>programmer</p>
@@ -78,7 +78,7 @@
                     <div>
                         <div class="gradient_border">
                             <div>
-                                <img src="/img/respondeai 1.png" alt="story">
+                                <img src="./img/respondeai 1.png" alt="story">
                             </div>
                         </div>
                         <p>respondeai</p>
@@ -86,7 +86,7 @@
                     <div>
                         <div class="gradient_border">
                             <div>
-                                <img src="/img/barked 1.png" alt="story">
+                                <img src="./img/barked 1.png" alt="story">
                             </div>
                         </div>
                         <p>barkaed</p>
@@ -94,7 +94,7 @@
                     <div>
                         <div class="gradient_border">
                             <div>
-                                <img src="/img/story1.jpg" alt="story">
+                                <img src="./img/story1.jpg" alt="story">
                             </div>
                         </div>
                         <p>Wallpapers</p>
@@ -102,7 +102,7 @@
                     <div>
                         <div class="gradient_border">
                             <div>
-                                <img src="/img/driven.png" alt="story">
+                                <img src="./img/driven.png" alt="story">
                             </div>
                         </div>
                         <p>Driven</p>
@@ -110,7 +110,7 @@
                     <div>
                         <div class="gradient_border">
                             <div>
-                                <img src="/img/meowed 1.png" alt="story">
+                                <img src="./img/meowed 1.png" alt="story">
                             </div>
                         </div>
                         <p>meowed</p>
@@ -118,7 +118,7 @@
                     <div>
                         <div class="gradient_border">
                             <div>
-                                <img src="/img/cars.jpg" alt="story">
+                                <img src="./img/cars.jpg" alt="story">
                             </div>
                         </div>
                         <p>cars</p>
@@ -126,7 +126,7 @@
                     <div>
                         <div class="gradient_border">
                             <div>
-                                <img src="/img/world_programming.jpg" alt="story">
+                                <img src="./img/world_programming.jpg" alt="story">
                             </div>
                         </div>
                         <p>programmer</p>
@@ -189,7 +189,7 @@
                             <button>
                                 <ion-icon name="happy-outline"></ion-icon>
                             </button>
-                            <input type="text" value="Adicionar comentário...">
+                            <input type="text" placeholder="Adicionar comentário...">
                         </div>
                         <button>Publicar</button>
                     </div>
@@ -245,7 +245,7 @@
                             <button>
                                 <ion-icon name="happy-outline"></ion-icon>
                             </button>
-                            <input type="text" value="Adicionar comentário...">
+                            <input type="text" placeholder="Adicionar comentário...">
                         </div>
                         <button>Publicar</button>
                     </div>
@@ -263,8 +263,8 @@
                     </div>
                     <div class="video">
                         <video autoplay loop muted>
-                            <source src="/img/video.mp4" type="video/mp4">
-                            <source src="/img/video.ogv" type="video/ogv">
+                            <source src="./img/video.mp4" type="video/mp4">
+                            <source src="./img/video.ogv" type="video/ogv">
                             Seu navegador não suporta reproduzir esse vídeo.
                         </video>
                     </div>
@@ -307,7 +307,7 @@
                             <button>
                                 <ion-icon name="happy-outline"></ion-icon>
                             </button>
-                            <input type="text" value="Adicionar comentário...">
+                            <input type="text" placeholder="Adicionar comentário...">
                         </div>
                         <button>Publicar</button>
                     </div>
@@ -363,7 +363,7 @@
                             <button>
                                 <ion-icon name="happy-outline"></ion-icon>
                             </button>
-                            <input type="text" value="Adicionar comentário...">
+                            <input type="text" placeholder="Adicionar comentário...">
                         </div>
                         <button>Publicar</button>
                     </div>
@@ -419,7 +419,7 @@
                             <button>
                                 <ion-icon name="happy-outline"></ion-icon>
                             </button>
-                            <input type="text" value="Adicionar comentário...">
+                            <input type="text" placeholder="Adicionar comentário...">
                         </div>
                         <button>Publicar</button>
                     </div>
@@ -475,7 +475,7 @@
                             <button>
                                 <ion-icon name="happy-outline"></ion-icon>
                             </button>
-                            <input type="text" value="Adicionar comentário...">
+                            <input type="text" placeholder="Adicionar comentário...">
                         </div>
                         <button>Publicar</button>
                     </div>
@@ -531,7 +531,7 @@
                             <button>
                                 <ion-icon name="happy-outline"></ion-icon>
                             </button>
-                            <input type="text" value="Adicionar comentário...">
+                            <input type="text" placeholder="Adicionar comentário...">
                         </div>
                         <button>Publicar</button>
                     </div>
@@ -557,7 +557,7 @@
         </div>
         <div class="sidebar">
             <div class="account_featured">
-                <!-- <img src="/img/imgpw.png" alt="Perfil proprio">
+                <!-- <img src="./img/imgpw.png" alt="Perfil proprio">
                  -->
                 <i></i>
                 <div>
