--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                         </button>
                     </div>
                     <div class="video">
-                        <video autoplay loop muted>
+                        <video autoplay loop muted controls>
                             <source src="./img/video.mp4" type="video/mp4">
                             <source src="./img/video.ogv" type="video/ogv">
                             Seu navegador não suporta reproduzir esse vídeo.
